[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
lib = { path = "../lib" }
rmp-serde = "1.3.0"
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.8"
toml = "0.8.19"
