[package]
name = "duh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
lib = { path = "../lib" }
atty = "0.2"
rmp-serde = "1.3.0"
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.8"
toml = "0.8.19"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true
